quill toolbar, null theme

--- a/public/reporte_diario.html
+++ b/public/reporte_diario.html
@@ -47,6 +47,16 @@
     crossorigin="anonymous"></script>
   <link href="styles/owl.carousel.css" type="text/css" rel="stylesheet" media="screen">
   <script src="js/owl.carousel.min.js" type="text/javascript"></script>
+  <style>
+    #report_container { 
+      width: 794px; 
+      margin: 0 auto;
+      padding: 40px;
+      background: white;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+      box-sizing: border-box;
+    }
+  </style>
 </head>
 <body>
   <div id="report_container"></div>
