--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,47 @@
 <html>
 <head>
   <title>Editor de reporte diario</title>
-  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <!-- <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet"> -->
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
   <style>
-    #editor { height: 500px; }
-    .button { margin-top: 10px; }
-    #html-view { display:none; width:100%; height:500px; }
+    #editor { 
+      width: 794px; 
+      height: 500px; 
+      margin: 0 auto;
+      padding: 40px;
+      background: white;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+      box-sizing: border-box;
+      flex: 1;
+      overflow-y: auto;     /* Scrollable content */
+
+    }
+    .button {
+      margin-top: 10px; 
+    }
+    #html-view { 
+      display:none;
+      width: 794px; 
+      /* width:100%;  */
+      height:500px; 
+    }
+    .ql-toolbar button {
+      background: none;
+      border: none;
+      cursor: pointer;
+      display: inline-block;
+      float: left;
+      height: 24px;
+      padding: 3px 5px;
+      width: 28px;
+    }
+    .ql-toolbar button svg {
+      float: left;
+      height: 100%;
+    }
+    .ql-toolbar button:active:hover {
+      outline: none;
+    }
   </style>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
@@ -56,21 +91,44 @@
   <script src="js/owl.carousel.min.js" type="text/javascript"></script>
   <script src="https://unpkg.com/prettier@3.2.5/standalone.js"></script>
   <script src="https://unpkg.com/prettier@3.2.5/parser-html.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-  <h1>Editar reporte diario</h1>
-  <button id="toggleView">Toggle Code View</button>
-  <div id="editor"></div>
-  <textarea id="html-view"></textarea>
-  <button class="button" onclick="saveContent()">Save</button>
-  <span>
-    <button class="button" onclick="startFromTemplate()">Load template</button>
-  </span>
-  <span>
-    <a href="reporte_diario.html" target="_blank">View</a>
-  </span>
+  <div>
+    <h1>Editar reporte diario</h1>
+    <div style="display: grid; place-items: center;">
+      <button id="toggleView">Cambiar a vista de código</button>
+      <div id="toolbar">
+        <button class="ql-bold"><i class="fas fa-bold"></i></button>
+        <button class="ql-italic"><i class="fas fa-italic"></i></button>
+        <select class="ql-header">
+          <option value="1">H1</option>
+          <option value="2">H2</option>
+          <option selected>Normal</option>
+        </select>
+        <button class="ql-list" value="ordered"><i class="fas fa-list-ol"></i></button>
+        <button class="ql-list" value="bullet"><i class="fas fa-list-ul"></i></button>
+      </div>
+      <div id="editor"></div>
+      <textarea id="html-view"></textarea>
+      <div>
+        <button class="button" id=save-button onclick="saveContent()">Guardar</button>
+        <span>
+          <button class="button" id=load-template-button onclick="startFromTemplate()">Cargar plantilla</button>
+        </span>
+        <span>
+          <a href="reporte_diario.html" target="_blank">Ver</a>
+        </span>
+      </div>
+    </div>
+  </div>
   <script>
-    const quill = new Quill('#editor', { theme: 'snow' });
+    const quill = new Quill('#editor', { 
+      modules: {
+        toolbar: '#toolbar'
+      },
+      theme: null 
+    });
 
     // Load existing content
     fetch('/content')
@@ -99,13 +157,21 @@
         htmlView.value = formatted;
         htmlView.style.display = 'block';
         editorContainer.style.display = 'none';
-        toggleBtn.textContent = 'Switch to WYSIWYG';
+        toggleBtn.textContent = 'Cambiar a WYSIWYG';
+        document.getElementById("save-button").disabled = true
+        document.getElementById("load-template-button").disabled = true
+        document.getElementById("toolbar").style.display = "none" 
       } else {
         // Switch back to Quill
-        quill.root.innerHTML = htmlView.value;
+        // quill.root.innerHTML = htmlView.value;
+        const delta = quill.clipboard.convert(htmlView.value);
+        quill.setContents(delta);
         htmlView.style.display = 'none';
         editorContainer.style.display = 'block';
-        toggleBtn.textContent = 'Switch to Code View';
+        toggleBtn.textContent = 'Cambiar a vista de código';
+        document.getElementById("save-button").disabled = false
+        document.getElementById("load-template-button").disabled = false
+        document.getElementById("toolbar").style.display = "block" 
       }
     });
 
