add img, intento de parse table no funciona

--- a/public/reporte_diario.html
+++ b/public/reporte_diario.html
@@ -56,6 +56,10 @@
       box-shadow: 0 0 5px rgba(0,0,0,0.1);
       box-sizing: border-box;
     }
+    #report_container img {
+      max-width: 714px;
+    }
+
   </style>
 </head>
 <body>
