--- a/public/template.html
+++ b/public/template.html
@@ -5,39 +5,99 @@
     <section>
       <div class="container">
         <h2>Reporte diario</h2>
-        <h4>Situación meteorológica</h4>
-        <p>Su objetivo consiste en el desarrollo, mantenimiento y operación de
-          un Servicio permanente de diagnóstico y pronóstico hidrológico
-          en los ríos Paraná, Paraguay, Iguazú y Uruguay, como soporte para la
-          gestión de emergencias hídricas por crecidas ribereñas o bajantes
-          pronunciadas.</p>
-        <p>Para esto, primeramente se propone adoptar un proceso de mejora
-          continúa sobre el desarrollo y las prácticas de operación de un Sistema
-          de Información y Alerta Hidrológico para la detección temprana de
-          crecidas ribereñas y bajantes pronunciadas en los principales ríos de la
-          Cuenca del Plata (Sistema de Información y Alerta Hidrológica de la
-          Cuenca del Plata).</p>
-        <h4>Situación hidrológica</h4>
-        <ul>
-          <li>Coordinar con los organismos provinciales, nacionales e
-            internacionales la adquisición e intercambio de la información hídrica
-            necesaria a los objetivos de los sistemas.</li>
-          <li>Supervisar la ejecución de los pronósticos numéricos de alturas y
-            caudales que permitan realizar predicciones basadas en los datos
-            recolectados en tiempo real, diseñando y
-            ejecutando las metodologías de trabajo para una creciente participación
-            de los usuarios en los Sistemas de Alerta.</li>
-          <li>Dirigir el <a href="https://www.ina.gov.ar/alerta/index.php" alt="enlace al sistema de Alerta">Servicio de
-              Alerta Hidrológico de la Cuenca del Plata</a>, proveyendo en tiempo y forma información, pronósticos y
-            alertas de riesgo a organismos gubernamentales, provinciales
-            y demás sectores públicos y privados afectados, y supervisar los demás sistemas de alerta hidrológico del
-            Instituto.</li>
-          <li> Coordinar las tareas, el procesamiento, almacenamiento y manejo de
-            la información hídrica, cartográfica y de imágenes satelitales, con el
-            objeto de asegurar la disponibilidad
-            y confiabilidad de dicha información en un Sistema Integrado.</li>
-        </ul>
-        <br>
+        <h3>Situación meteorológica</h3>
+        <h4>Mapa de acumulado semanal</h4>
+        <p><img src="https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales/pp_semanal_20181213_rst.png"></p>
+        <p>Texto que describe el acumulado semanal</p>
+        <h4>Mapa de pronóstico a 7 días</h4>
+        <p><img src="https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025042406.2025042412.suma.png"></p>
+        <h3>Situación hidrológica</h3>
+        <h4>Tabla de situación y perspectiva a corto plazo</h4>
+        <table>
+          <thead>
+            <td>Estación</td>
+            <td>Río</td>
+            <td>Lectura (m)</td>
+            <td>Alerta</td>
+            <td>Evacuación</td>
+            <td>Perspectiva</td>
+          </thead>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+        </table>
+        <p>Texto que describe la situación y perspectiva</p>
+        <h4>Hidrogramas</h4>
+        <p><img src="https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/corrientes.png"></p>
       </div>
     </section>
 </body>
