--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
       overflow-y: auto;     /* Scrollable content */
 
     }
+    #editor img {
+      max-width: 714px;
+    }
     .button {
       margin-top: 10px; 
     }
@@ -92,6 +95,7 @@
   <script src="https://unpkg.com/prettier@3.2.5/standalone.js"></script>
   <script src="https://unpkg.com/prettier@3.2.5/parser-html.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/quill-better-table@1.2.8/dist/quill-better-table.css">
 </head>
 <body>
   <div>
@@ -108,6 +112,8 @@
         </select>
         <button class="ql-list" value="ordered"><i class="fas fa-list-ol"></i></button>
         <button class="ql-list" value="bullet"><i class="fas fa-list-ul"></i></button>
+        <button class="ql-image"><i class="fas fa-image"></i></button>
+        <!-- <button class="ql-insertTable"><i class="fa-solid fa-table"></i></button> -->
       </div>
       <div id="editor"></div>
       <textarea id="html-view"></textarea>
@@ -122,60 +128,106 @@
       </div>
     </div>
   </div>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/quill/2.0.0-dev.3/quill.min.js" type="text/javascript"></script> -->
+  <script src="https://unpkg.com/quill-better-table@1.2.10/dist/quill-better-table.min.js"></script>
   <script>
-    const quill = new Quill('#editor', { 
-      modules: {
-        toolbar: '#toolbar'
-      },
-      theme: null 
-    });
+    // Quill.register({
+    //   'modules/better-table': quillBetterTable
+    // }, true)
+    // window.onload = () => {
 
-    // Load existing content
-    fetch('/content')
-      .then(res => res.text())
-      .then(html => {
-        const delta = quill.clipboard.convert(html);
-        quill.setContents(delta);
+      const quill = new Quill('#editor', { 
+        modules: {
+          toolbar: '#toolbar',
+          clipboard: true,
+          // table: false,  // disable table module
+          // 'better-table': {
+          //   operationMenu: {
+          //     items: {
+          //       unmergeCells: {
+          //         text: 'Another unmerge cells name'
+          //       }
+          //     }
+          //   }
+          // },
+          // keyboard: {
+          //   bindings: quillBetterTable.keyboardBindings
+          // }
+        },
+        theme: null 
+      });
+      // const Delta = Quill.import('delta');
+      // const clipboard = quill.getModule('clipboard');
+
+      // clipboard.addMatcher('DIV', (node, delta) => {
+      //   const classAttr = node.getAttribute('class');
+      //   if (classAttr) {
+      //     // Apply as a custom attribute in Delta
+      //     return delta.compose(new Delta().retain(delta.length(), {
+      //       class: classAttr
+      //     }));
+      //   }
+      //   return delta;
+      // });
+
+      // Load existing content
+      fetch('/content')
+        .then(res => res.text())
+        .then(html => {
+          // const parser = new Clipboard(quill, quill.options.modules.clipboard)
+          html = convertTablesToP(html)
+          const delta = quill.getModule('clipboard').convert(html);
+          quill.setContents(delta);
+          console.debug(delta)
+        });
+
+      const toggleBtn = document.getElementById('toggleView');
+      const htmlView = document.getElementById('html-view');
+      const editorContainer = document.getElementById('editor');
+
+      let codeView = false;
+
+      toggleBtn.addEventListener('click', async () => {
+        codeView = !codeView;
+
+        if (codeView) {
+          // Switch to HTML view
+          const rawHtml = quill.root.innerHTML;
+          const formatted = await prettier.format(rawHtml, {
+            parser: 'html',
+            plugins: prettierPlugins
+          });
+          htmlView.value = formatted;
+          htmlView.style.display = 'block';
+          editorContainer.style.display = 'none';
+          toggleBtn.textContent = 'Cambiar a WYSIWYG';
+          document.getElementById("save-button").disabled = true
+          document.getElementById("load-template-button").disabled = true
+          document.getElementById("toolbar").style.display = "none" 
+        } else {
+          // Switch back to Quill
+          // quill.root.innerHTML = htmlView.value;
+          // const parser = new Clipboard(quill, quill.options.modules.clipboard)
+          var html = htmlView.value
+          html = convertTablesToP(html)
+          const delta = quill.getModule('clipboard').convert(html);
+          // const delta = quill.clipboard.convert(htmlView.value);
+          quill.setContents(delta);
+          htmlView.style.display = 'none';
+          editorContainer.style.display = 'block';
+          toggleBtn.textContent = 'Cambiar a vista de código';
+          document.getElementById("save-button").disabled = false
+          document.getElementById("load-template-button").disabled = false
+          document.getElementById("toolbar").style.display = "block" 
+        }
       });
 
-    const toggleBtn = document.getElementById('toggleView');
-    const htmlView = document.getElementById('html-view');
-    const editorContainer = document.getElementById('editor');
-
-    let codeView = false;
-
-    toggleBtn.addEventListener('click', async () => {
-      codeView = !codeView;
-
-      if (codeView) {
-        // Switch to HTML view
-        const rawHtml = quill.root.innerHTML;
-        const formatted = await prettier.format(rawHtml, {
-          parser: 'html',
-          plugins: prettierPlugins
-        });
-        htmlView.value = formatted;
-        htmlView.style.display = 'block';
-        editorContainer.style.display = 'none';
-        toggleBtn.textContent = 'Cambiar a WYSIWYG';
-        document.getElementById("save-button").disabled = true
-        document.getElementById("load-template-button").disabled = true
-        document.getElementById("toolbar").style.display = "none" 
-      } else {
-        // Switch back to Quill
-        // quill.root.innerHTML = htmlView.value;
-        const delta = quill.clipboard.convert(htmlView.value);
-        quill.setContents(delta);
-        htmlView.style.display = 'none';
-        editorContainer.style.display = 'block';
-        toggleBtn.textContent = 'Cambiar a vista de código';
-        document.getElementById("save-button").disabled = false
-        document.getElementById("load-template-button").disabled = false
-        document.getElementById("toolbar").style.display = "block" 
-      }
-    });
-
-    // Save content
+      // document.querySelector('.ql-insertTable').addEventListener('click', () => {
+      //   const tableModule = quill.getModule('better-table');
+      //   tableModule.insertTable(3, 3); // rows, columns
+      // });
+    // }
+      // Save content
     function saveContent() {
       const html = quill.root.innerHTML;
       fetch('/save', {
@@ -190,11 +242,49 @@
       fetch('/template')
       .then(res => res.text())
       .then(html => {
-        const delta = quill.clipboard.convert(html);
+        html = convertTablesToP(html)
+        const delta = quill.getModule('clipboard').convert(html);
         quill.setContents(delta);
+        // document.querySelector("div.ql-editor").innerHTML = html
       });
-
     }
+
+    function htmlStringToDOM(html) {
+      return new DOMParser().parseFromString(html, 'text/html').body;
+    }
+
+    function tableToCSV(table, sep=',',linebreak='<br>') {
+      const rows = Array.from(table.querySelectorAll('tr'));
+      return rows.map(row => {
+        const cells = Array.from(row.querySelectorAll('th, td'));
+        return cells.map(cell => `${cell.textContent.replace(/"/g, '""')}`).join(sep);
+      }).join(linebreak);
+    }
+
+    function replaceElements(dom, selector, replacer) {
+      const elements = dom.querySelectorAll(selector);
+      elements.forEach(el => {
+        const replacement = replacer(el);
+        if (replacement instanceof Node) {
+          el.replaceWith(replacement);
+        }
+      });
+    }
+
+    function convertTablesToP(html) {
+      const dom = htmlStringToDOM(html)
+      // const tables = dom.getElementsByTagName("table")
+      replaceElements(dom, "table", table => {
+        const div = document.createElement('div');
+        div.classList.add("csv-table")
+        div.innerHTML = tableToCSV(table,";")
+        return div
+      })
+      return dom.innerHTML
+    }
+
+
+
   </script>
 </body>
 </html>
