--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
     </div>
   </div>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/quill/2.0.0-dev.3/quill.min.js" type="text/javascript"></script> -->
-  <script src="https://unpkg.com/quill-better-table@1.2.10/dist/quill-better-table.min.js"></script>
+  <!-- <script src="https://unpkg.com/quill-better-table@1.2.10/dist/quill-better-table.min.js"></script> -->
   <script>
     // Quill.register({
     //   'modules/better-table': quillBetterTable
