--- a/public/index.html
+++ b/public/index.html
@@ -2,51 +2,6 @@
 <html>
 <head>
   <title>Editor de reporte diario</title>
-  <!-- <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet"> -->
-  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-  <style>
-    #editor { 
-      width: 794px; 
-      height: 500px; 
-      margin: 0 auto;
-      padding: 40px;
-      background: white;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      box-sizing: border-box;
-      flex: 1;
-      overflow-y: auto;     /* Scrollable content */
-
-    }
-    #editor img {
-      max-width: 714px;
-    }
-    .button {
-      margin-top: 10px; 
-    }
-    #html-view { 
-      display:none;
-      width: 794px; 
-      /* width:100%;  */
-      height:500px; 
-    }
-    .ql-toolbar button {
-      background: none;
-      border: none;
-      cursor: pointer;
-      display: inline-block;
-      float: left;
-      height: 24px;
-      padding: 3px 5px;
-      width: 28px;
-    }
-    .ql-toolbar button svg {
-      float: left;
-      height: 100%;
-    }
-    .ql-toolbar button:active:hover {
-      outline: none;
-    }
-  </style>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -95,28 +50,69 @@
   <script src="https://unpkg.com/prettier@3.2.5/standalone.js"></script>
   <script src="https://unpkg.com/prettier@3.2.5/parser-html.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/quill-better-table@1.2.8/dist/quill-better-table.css">
+  <link class="jsbin" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css" rel="stylesheet" type="text/css" />
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.min.js" integrity="sha256-AlTido85uXPlSyyaZNsjJXeCs07eSv3r43kyCVc8ChI=" crossorigin="anonymous"></script>  
+  <link rel="stylesheet" href="styles/richtext.min.css" type="text/css">
+  <script class="jsbin" src="js/jquery.richtext.min.js" type="application/javascript"></script>
+  <style>
+    #editor, div.richText { 
+      width: 794px; 
+      height: 500px; 
+      /* margin: 0 auto;
+      padding: 40px;
+      background: white;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+      box-sizing: border-box;
+      flex: 1;
+      overflow-y: auto;     Scrollable content */
+
+    }
+    #editor img, div.richText img {
+      max-width: 714px;
+    }
+    .richText .richText-editor table {
+      width: 714px; 
+      margin: 10px 0;
+    }
+    .richText .richText-editor table td, .richText .richText-editor table th {
+      padding: 10px;
+      border: #EFEFEF solid 1px;
+    }
+    .button {
+      margin-top: 10px; 
+    }
+    #html-view { 
+      display:none;
+      width: 794px; 
+      /* width:100%;  */
+      height:500px; 
+    }
+    .ql-toolbar button {
+      background: none;
+      border: none;
+      cursor: pointer;
+      display: inline-block;
+      float: left;
+      height: 24px;
+      padding: 3px 5px;
+      width: 28px;
+    }
+    .ql-toolbar button svg {
+      float: left;
+      height: 100%;
+    }
+    .ql-toolbar button:active:hover {
+      outline: none;
+    }
+  </style>
 </head>
 <body>
   <div>
     <h1>Editar reporte diario</h1>
     <div style="display: grid; place-items: center;">
-      <button id="toggleView">Cambiar a vista de código</button>
-      <div id="toolbar">
-        <button class="ql-bold"><i class="fas fa-bold"></i></button>
-        <button class="ql-italic"><i class="fas fa-italic"></i></button>
-        <select class="ql-header">
-          <option value="1">H1</option>
-          <option value="2">H2</option>
-          <option selected>Normal</option>
-        </select>
-        <button class="ql-list" value="ordered"><i class="fas fa-list-ol"></i></button>
-        <button class="ql-list" value="bullet"><i class="fas fa-list-ul"></i></button>
-        <button class="ql-image"><i class="fas fa-image"></i></button>
-        <!-- <button class="ql-insertTable"><i class="fa-solid fa-table"></i></button> -->
-      </div>
-      <div id="editor"></div>
-      <textarea id="html-view"></textarea>
+      <!-- <button id="toggleView">Cambiar a vista de código</button> -->
+      <textarea id="editor"></textarea>
       <div>
         <button class="button" id=save-button onclick="saveContent()">Guardar</button>
         <span>
@@ -128,99 +124,57 @@
       </div>
     </div>
   </div>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/quill/2.0.0-dev.3/quill.min.js" type="text/javascript"></script> -->
-  <!-- <script src="https://unpkg.com/quill-better-table@1.2.10/dist/quill-better-table.min.js"></script> -->
   <script>
-    // Quill.register({
-    //   'modules/better-table': quillBetterTable
-    // }, true)
-    // window.onload = () => {
 
-      const quill = new Quill('#editor', { 
-        modules: {
-          toolbar: '#toolbar',
-          clipboard: true,
-          // table: false,  // disable table module
-          // 'better-table': {
-          //   operationMenu: {
-          //     items: {
-          //       unmergeCells: {
-          //         text: 'Another unmerge cells name'
-          //       }
-          //     }
-          //   }
-          // },
-          // keyboard: {
-          //   bindings: quillBetterTable.keyboardBindings
-          // }
-        },
-        theme: null 
-      });
-      // const Delta = Quill.import('delta');
-      // const clipboard = quill.getModule('clipboard');
-
-      // clipboard.addMatcher('DIV', (node, delta) => {
-      //   const classAttr = node.getAttribute('class');
-      //   if (classAttr) {
-      //     // Apply as a custom attribute in Delta
-      //     return delta.compose(new Delta().retain(delta.length(), {
-      //       class: classAttr
-      //     }));
-      //   }
-      //   return delta;
-      // });
+      $("textarea#editor").richText()
 
       // Load existing content
       fetch('/content')
         .then(res => res.text())
         .then(html => {
-          // const parser = new Clipboard(quill, quill.options.modules.clipboard)
-          html = convertTablesToP(html)
-          const delta = quill.getModule('clipboard').convert(html);
-          quill.setContents(delta);
-          console.debug(delta)
+          $("textarea#editor").val(html).trigger("change")     
         });
 
-      const toggleBtn = document.getElementById('toggleView');
+      // const toggleBtn = document.getElementById('toggleView');
       const htmlView = document.getElementById('html-view');
       const editorContainer = document.getElementById('editor');
 
       let codeView = false;
 
-      toggleBtn.addEventListener('click', async () => {
-        codeView = !codeView;
+      // toggleBtn.addEventListener('click', async () => {
+      //   codeView = !codeView;
 
-        if (codeView) {
-          // Switch to HTML view
-          const rawHtml = quill.root.innerHTML;
-          const formatted = await prettier.format(rawHtml, {
-            parser: 'html',
-            plugins: prettierPlugins
-          });
-          htmlView.value = formatted;
-          htmlView.style.display = 'block';
-          editorContainer.style.display = 'none';
-          toggleBtn.textContent = 'Cambiar a WYSIWYG';
-          document.getElementById("save-button").disabled = true
-          document.getElementById("load-template-button").disabled = true
-          document.getElementById("toolbar").style.display = "none" 
-        } else {
-          // Switch back to Quill
-          // quill.root.innerHTML = htmlView.value;
-          // const parser = new Clipboard(quill, quill.options.modules.clipboard)
-          var html = htmlView.value
-          html = convertTablesToP(html)
-          const delta = quill.getModule('clipboard').convert(html);
-          // const delta = quill.clipboard.convert(htmlView.value);
-          quill.setContents(delta);
-          htmlView.style.display = 'none';
-          editorContainer.style.display = 'block';
-          toggleBtn.textContent = 'Cambiar a vista de código';
-          document.getElementById("save-button").disabled = false
-          document.getElementById("load-template-button").disabled = false
-          document.getElementById("toolbar").style.display = "block" 
-        }
-      });
+      //   if (codeView) {
+      //     // Switch to HTML view
+      //     const rawHtml = quill.root.innerHTML;
+      //     const formatted = await prettier.format(rawHtml, {
+      //       parser: 'html',
+      //       plugins: prettierPlugins
+      //     });
+      //     htmlView.value = formatted;
+      //     htmlView.style.display = 'block';
+      //     editorContainer.style.display = 'none';
+      //     toggleBtn.textContent = 'Cambiar a WYSIWYG';
+      //     document.getElementById("save-button").disabled = true
+      //     document.getElementById("load-template-button").disabled = true
+      //     document.getElementById("toolbar").style.display = "none" 
+      //   } else {
+      //     // Switch back to Quill
+      //     // quill.root.innerHTML = htmlView.value;
+      //     // const parser = new Clipboard(quill, quill.options.modules.clipboard)
+      //     var html = htmlView.value
+      //     html = convertTablesToP(html)
+      //     const delta = quill.getModule('clipboard').convert(html);
+      //     // const delta = quill.clipboard.convert(htmlView.value);
+      //     quill.setContents(delta);
+      //     htmlView.style.display = 'none';
+      //     editorContainer.style.display = 'block';
+      //     toggleBtn.textContent = 'Cambiar a vista de código';
+      //     document.getElementById("save-button").disabled = false
+      //     document.getElementById("load-template-button").disabled = false
+      //     document.getElementById("toolbar").style.display = "block" 
+      //   }
+      // });
 
       // document.querySelector('.ql-insertTable').addEventListener('click', () => {
       //   const tableModule = quill.getModule('better-table');
@@ -229,7 +183,7 @@
     // }
       // Save content
     function saveContent() {
-      const html = quill.root.innerHTML;
+      const html = $("textarea#editor").val();
       fetch('/save', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
@@ -242,46 +196,43 @@
       fetch('/template')
       .then(res => res.text())
       .then(html => {
-        html = convertTablesToP(html)
-        const delta = quill.getModule('clipboard').convert(html);
-        quill.setContents(delta);
-        // document.querySelector("div.ql-editor").innerHTML = html
+        $("textarea#editor").val(html).trigger("change")
       });
     }
 
-    function htmlStringToDOM(html) {
-      return new DOMParser().parseFromString(html, 'text/html').body;
-    }
+    // function htmlStringToDOM(html) {
+    //   return new DOMParser().parseFromString(html, 'text/html').body;
+    // }
 
-    function tableToCSV(table, sep=',',linebreak='<br>') {
-      const rows = Array.from(table.querySelectorAll('tr'));
-      return rows.map(row => {
-        const cells = Array.from(row.querySelectorAll('th, td'));
-        return cells.map(cell => `${cell.textContent.replace(/"/g, '""')}`).join(sep);
-      }).join(linebreak);
-    }
+    // function tableToCSV(table, sep=',',linebreak='<br>') {
+    //   const rows = Array.from(table.querySelectorAll('tr'));
+    //   return rows.map(row => {
+    //     const cells = Array.from(row.querySelectorAll('th, td'));
+    //     return cells.map(cell => `${cell.textContent.replace(/"/g, '""')}`).join(sep);
+    //   }).join(linebreak);
+    // }
 
-    function replaceElements(dom, selector, replacer) {
-      const elements = dom.querySelectorAll(selector);
-      elements.forEach(el => {
-        const replacement = replacer(el);
-        if (replacement instanceof Node) {
-          el.replaceWith(replacement);
-        }
-      });
-    }
+    // function replaceElements(dom, selector, replacer) {
+    //   const elements = dom.querySelectorAll(selector);
+    //   elements.forEach(el => {
+    //     const replacement = replacer(el);
+    //     if (replacement instanceof Node) {
+    //       el.replaceWith(replacement);
+    //     }
+    //   });
+    // }
 
-    function convertTablesToP(html) {
-      const dom = htmlStringToDOM(html)
-      // const tables = dom.getElementsByTagName("table")
-      replaceElements(dom, "table", table => {
-        const div = document.createElement('div');
-        div.classList.add("csv-table")
-        div.innerHTML = tableToCSV(table,";")
-        return div
-      })
-      return dom.innerHTML
-    }
+    // function convertTablesToP(html) {
+    //   const dom = htmlStringToDOM(html)
+    //   // const tables = dom.getElementsByTagName("table")
+    //   replaceElements(dom, "table", table => {
+    //     const div = document.createElement('div');
+    //     div.classList.add("csv-table")
+    //     div.innerHTML = tableToCSV(table,";")
+    //     return div
+    //   })
+    //   return dom.innerHTML
+    // }
 
 
 
