--- a/public/saved.html
+++ b/public/saved.html
@@ -1,1 +1,105 @@
-<h2>Reporte diario</h2><h3>Situación meteorológica</h3><h4>Mapa de acumulado semanal</h4><p><img src="https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales/pp_semanal_20181213_rst.png"></p><p>Texto que describe el acumulado semanal</p><h4>Mapa de pronóstico a 7 días</h4><p><img src="https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025042406.2025042412.suma.png"></p><h3>Situación hidrológica</h3><h4>Tabla de situación y perspectiva a corto plazo</h4><p>Estación;Río;Lectura (m);Alerta;Evacuación;Perspectiva</p><p>Puerto Iguazú;Iguazú;7,40;25,00;28,00;Aguas medias</p><p>Puerto Iguazú;Iguazú;7,40;25,00;28,00;Aguas medias</p><p>Puerto Iguazú;Iguazú;7,40;25,00;28,00;Aguas medias</p><p>Puerto Iguazú;Iguazú;7,40;25,00;28,00;Aguas medias</p><p>Puerto Iguazú;Iguazú;7,40;25,00;28,00;Aguas medias</p><p>Puerto Iguazú;Iguazú;7,40;25,00;28,00;Aguas medias</p><p>Puerto Iguazú;Iguazú;7,40;25,00;28,00;Aguas medias</p><p>Puerto Iguazú;Iguazú;7,40;25,00;28,00;Aguas medias</p><p>Puerto Iguazú;Iguazú;7,40;25,00;28,00;Aguas medias</p><p>Texto que describe la situación y perspectiva</p><h4>Hidrogramas</h4><p><img src="https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/corrientes.png"></p>
+<html lang="es">
+
+<body>
+  <main role="main">
+    <section>
+      <div class="container">
+        <h2>Reporte diario</h2>
+        <h3>Situación meteorológica</h3>
+        <h4>Mapa de acumulado semanal</h4>
+        <p><img src="https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales/pp_semanal_20181213_rst.png"></p>
+        <p>Texto que describe el acumulado semanal</p>
+        <h4>Mapa de pronóstico a 7 días</h4>
+        <p><img src="https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025042406.2025042412.suma.png"></p>
+        <h3>Situación hidrológica</h3>
+        <h4>Tabla de situación y perspectiva a corto plazo</h4>
+        <table>
+          <thead>
+            <td>Estación</td>
+            <td>Río</td>
+            <td>Lectura (m)</td>
+            <td>Alerta</td>
+            <td>Evacuación</td>
+            <td>Perspectiva</td>
+          </thead>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+          <tr>
+            <td>Puerto Iguazú</td>
+            <td>Iguazú</td>
+            <td>7,40</td>
+            <td>25,00</td>
+            <td>28,00</td>
+            <td>Aguas medias</td>
+          </tr>
+        </table>
+        <p>Texto que describe la situación y perspectiva</p>
+        <h4>Hidrogramas</h4>
+        <p><img src="https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/corrientes.png"></p>
+      </div>
+    </section>
+</body>
+
+</html>
