--- a/public/reporte_diario.html
+++ b/public/reporte_diario.html
@@ -73,13 +73,16 @@
     }
     
     @media print {
+
       .print-header {
         display: block;
-        position: fixed;
-        top: 0;
+        /* position: fixed; */
+        /* top: -10mm; */
         width: 100%;
+        height: 40mm;
         text-align: center;
-        padding-bottom: 10px;
+        /* padding-bottom: 10px; */
+        z-index: 999;
       }
     }
     
@@ -88,7 +91,7 @@
 </head>
 <body>
   <div class="print-header">
-    <img src="membrete-2025.jpg" alt="Instituto Nacional del Agua" />
+    <img src="membrete-2025_con_logo_slhi.jpg" alt="Instituto Nacional del Agua" />
   </div>
   <div id="report_container"></div>
   <script>
