--- a/public/saved.html
+++ b/public/saved.html
@@ -1,5 +1,4 @@
 <html lang="es">
-
 <body>
   <main role="main">
     <section>
@@ -7,10 +6,10 @@
         <h2>Reporte diario</h2>
         <h3>Situación meteorológica</h3>
         <h4>Mapa de acumulado semanal</h4>
-        <p><img src="https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales/pp_semanal_20181213_rst.png"></p>
+        <p><img src=https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales/pp_semanal_20181213_rst.png></p>
         <p>Texto que describe el acumulado semanal</p>
         <h4>Mapa de pronóstico a 7 días</h4>
-        <p><img src="https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025042406.2025042412.suma.png"></p>
+        <p><img src=https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025042406.2025042412.suma.png></p>
         <h3>Situación hidrológica</h3>
         <h4>Tabla de situación y perspectiva a corto plazo</h4>
         <table>
@@ -22,84 +21,28 @@
             <td>Evacuación</td>
             <td>Perspectiva</td>
           </thead>
-          <tr>
-            <td>Puerto Iguazú</td>
-            <td>Iguazú</td>
-            <td>7,40</td>
-            <td>25,00</td>
-            <td>28,00</td>
-            <td>Aguas medias</td>
-          </tr>
-          <tr>
-            <td>Puerto Iguazú</td>
-            <td>Iguazú</td>
-            <td>7,40</td>
-            <td>25,00</td>
-            <td>28,00</td>
-            <td>Aguas medias</td>
-          </tr>
-          <tr>
-            <td>Puerto Iguazú</td>
-            <td>Iguazú</td>
-            <td>7,40</td>
-            <td>25,00</td>
-            <td>28,00</td>
-            <td>Aguas medias</td>
-          </tr>
-          <tr>
-            <td>Puerto Iguazú</td>
-            <td>Iguazú</td>
-            <td>7,40</td>
-            <td>25,00</td>
-            <td>28,00</td>
-            <td>Aguas medias</td>
-          </tr>
-          <tr>
-            <td>Puerto Iguazú</td>
-            <td>Iguazú</td>
-            <td>7,40</td>
-            <td>25,00</td>
-            <td>28,00</td>
-            <td>Aguas medias</td>
-          </tr>
-          <tr>
-            <td>Puerto Iguazú</td>
-            <td>Iguazú</td>
-            <td>7,40</td>
-            <td>25,00</td>
-            <td>28,00</td>
-            <td>Aguas medias</td>
-          </tr>
-          <tr>
-            <td>Puerto Iguazú</td>
-            <td>Iguazú</td>
-            <td>7,40</td>
-            <td>25,00</td>
-            <td>28,00</td>
-            <td>Aguas medias</td>
-          </tr>
-          <tr>
-            <td>Puerto Iguazú</td>
-            <td>Iguazú</td>
-            <td>7,40</td>
-            <td>25,00</td>
-            <td>28,00</td>
-            <td>Aguas medias</td>
-          </tr>
-          <tr>
-            <td>Puerto Iguazú</td>
-            <td>Iguazú</td>
-            <td>7,40</td>
-            <td>25,00</td>
-            <td>28,00</td>
-            <td>Aguas medias</td>
-          </tr>
+            <tr>
+                <td>Corrientes</td>
+                <td></td>
+                <td>1.68</td>
+                <td>6.5</td>
+                <td>7</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Barranqueras</td>
+                <td></td>
+                <td>1.67</td>
+                <td>6</td>
+                <td>6.5</td>
+                <td></td>
+            </tr>
         </table>
         <p>Texto que describe la situación y perspectiva</p>
         <h4>Hidrogramas</h4>
-        <p><img src="https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/corrientes.png"></p>
+            <p><img src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/corrientes.png></p>
+            <p><img src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/barranqueras.png></p>
       </div>
     </section>
 </body>
-
 </html>
