html: full width

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
   <script class="jsbin" src="js/jquery.richtext.min.js" type="application/javascript"></script>
   <style>
     #editor, div.richText { 
-      width: 794px; 
+      /* width: 794px;  */
       height: 500px; 
       /* margin: 0 auto;
       padding: 40px;
@@ -71,6 +71,14 @@
     #editor img, div.richText img {
       max-width: 714px;
     }
+
+    #editor img.mapa, div.richText img.mapa {
+      width: 355px;
+    }
+    #editor img.img.plot, div.richText img.plot {
+      width: 500px;
+    }
+
     .richText .richText-editor table {
       width: 714px; 
       margin: 10px 0;
