--- a/public/saved.html
+++ b/public/saved.html
@@ -6,10 +6,10 @@
         <h2>Reporte diario</h2>
         <h3>Situación meteorológica</h3>
         <h4>Mapa de acumulado semanal</h4>
-        <p><img src=https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales/pp_semanal_20181213_rst.png></p>
+        <p><img class="mapa" src=https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales/pp_semanal_20181213_rst.png></p>
         <p>Texto que describe el acumulado semanal</p>
         <h4>Mapa de pronóstico a 7 días</h4>
-        <p><img src=https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025042406.2025042412.suma.png></p>
+        <p><img class="mapa" src=https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025042406.2025042412.suma.png></p>
         <h3>Situación hidrológica</h3>
         <h4>Tabla de situación y perspectiva a corto plazo</h4>
         <table>
@@ -40,8 +40,8 @@
         </table>
         <p>Texto que describe la situación y perspectiva</p>
         <h4>Hidrogramas</h4>
-            <p><img src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/corrientes.png></p>
-            <p><img src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/barranqueras.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/corrientes.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/barranqueras.png></p>
       </div>
     </section>
 </body>
