--- a/public/reporte_diario.html
+++ b/public/reporte_diario.html
@@ -49,7 +49,6 @@
   <script src="js/owl.carousel.min.js" type="text/javascript"></script>
   <style>
     #report_container { 
-      width: 794px; 
       margin: 0 auto;
       padding: 40px;
       background: white;
@@ -59,6 +58,15 @@
     #report_container img {
       max-width: 714px;
     }
+
+    #report_container img.mapa {
+      width: 355px;
+    }
+
+    #report_container img.plot {
+      width: 500px;
+    }
+
     #report_container table {
       width: 714px; 
       margin: 10px 0;
@@ -84,6 +92,12 @@
         /* padding-bottom: 10px; */
         z-index: 999;
       }
+
+      #report_container {
+        width: 794px; 
+      }
+
+
     }
     
 
