fixed decimals, rio mapping, backg color lectura, img hrefs

--- a/public/index.html
+++ b/public/index.html
@@ -84,16 +84,29 @@
       width: 500px;
     }
 
-    .richText .richText-editor table {
+    .richText .richText-editor table.tabla-hidro {
       width: 714px; 
       margin: 10px 0;
     }
-    .richText .richText-editor table td, .richText .richText-editor table th {
-      padding: 10px;
-      border: #EFEFEF solid 1px;
+    .richText .richText-editor table.tabla-hidro td, .richText .richText-editor table.tabla-hidro th {
+      padding: 5px;
+      border: #EFEFEF solid 2px;
+      text-align: center;
+    }
+    .richText .richText-editor table.tabla-hidro thead {
+      background-color: darkgray;
     }
     .richText .richText-editor, .richText .richText-initial {
       height: 600px;
+    }
+    .richText .richText-editor table.leyenda-tabla-hidro {
+      width: fit-content;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .richText .richText-editor table.leyenda-tabla-hidro td {
+      padding: 0px;
+      text-align: center;
     }
     .button {
       margin-top: 10px; 
