--- a/public/saved.html
+++ b/public/saved.html
@@ -1,64 +1,223 @@
-
-
+<html lang="es">
+<body>
   <main role="main">
     <section>
       <div class="container-reporte">
         <h2>Reporte diario</h2>
+        <div>Fecha de emisión: <b>15/05/2025</b></div>
         <h3>Situación meteorológica</h3>
         <h4>Mapa de acumulado semanal</h4>
-        <div><img class="mapa" src="https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales/pp_semanal_20181213_rst.png"></div>
-        <div>Texto que describe el acumulado semanal</div>
+        <p><img class="mapa" src=https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales_/2025/05/pp_semanal_20250508_surf.png></p>
+        <p>Para lo que resta del día se esperan precipitaciones sobre aportes al Paraná en territorio argentino por margen derecha, así como sobre aportes al Bermejo y Pilcomayo. Para lo que resta de la semana, se esperan precipitaciones en gran parte de la cuenca, con acumulados mayores esperados sobre el tramo medio e inferior del Paraguay, sobre el tramo del Paraná en territorio argentino - paraguayo y sobre aportes al Salado Juramento y aportes por margen derecha al Paraná en territorio argentino.</p>
         <h4>Mapa de pronóstico a 7 días</h4>
-        <div><img class="mapa" src="https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025042406.2025042412.suma.png"></div>
+        <p><img class="mapa" src=https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025051506.2025051512.suma.png></p>
         <h3>Situación hidrológica</h3>
         <h4>Tabla de situación y perspectiva a corto plazo</h4>
-        <table>
+        <table class="tabla-hidro">
           <thead>
-            <tr><td>Estación</td>
+            <td>Estación</td>
             <td>Río</td>
             <td>Lectura (m)</td>
             <td>Alerta</td>
             <td>Evacuación</td>
-            <td>Estado</td>
             <td>Perspectiva</td>
             <td></td>
-          </tr></thead>
-            <tbody><tr>
-                <td>Bahia Negra</td>
-                <td>PARAGUAY</td>
-                <td>5.31 <i class="fas fa-equals"></i></td>
-                <td>5</td>
-                <td>5.5</td>
-                <td><div style="background-color: #cfe2f3; width: 100%; height: 100%;">aguas medias altas</div></td>
+          </thead>
+            <tr>
+                <td>Puerto Iguazú</td>
+                <td>Paraná</td>
+                <td style="background-color: #ea9999;">8,40 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>25,00</td>
+                <td>28,00</td>
                 <td></td>
-                <td><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color: yellow;"></i></td>
+                <td></td>
             </tr>
             <tr>
                 <td>Corrientes</td>
-                <td>PARANAMED</td>
-                <td>2.25 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
-                <td>6.5</td>
-                <td>7</td>
-                <td><div style="background-color: #ffd580; width: 100%; height: 100%;">aguas medias bajas</div></td>
+                <td>Paraná</td>
+                <td style="background-color: #f6b26b;">2,27 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>6,50</td>
+                <td>7,00</td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td>Barranqueras</td>
-                <td>BARRANQUERAS</td>
-                <td>2.2 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
-                <td>6</td>
-                <td>6.5</td>
-                <td><div style="background-color: #ffd580; width: 100%; height: 100%;">aguas medias bajas</div></td>
+                <td>Paraná</td>
+                <td style="background-color: #f6b26b;">2,26 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>6,00</td>
+                <td>6,50</td>
                 <td></td>
                 <td></td>
             </tr>
-        </tbody></table>
-        <div>Texto que describe la situación y perspectiva</div>
+            <tr>
+                <td>Goya</td>
+                <td>Paraná</td>
+                <td style="background-color: #f6b26b;">2,63 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+                <td>5,20</td>
+                <td>5,70</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Reconquista</td>
+                <td>Paraná</td>
+                <td style="background-color: #f6b26b;">2,30 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+                <td>5,10</td>
+                <td>5,30</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>La Paz</td>
+                <td>Paraná</td>
+                <td style="background-color: #f6b26b;">2,75 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>5,80</td>
+                <td>6,15</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td>Paraná</td>
+                <td style="background-color: #f6b26b;">1,62 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>4,70</td>
+                <td>5,00</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Santa Fe</td>
+                <td>Paraná</td>
+                <td style="background-color: #ea9999;">1,75 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>5,30</td>
+                <td>5,70</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Victoria</td>
+                <td>Paraná/Delta</td>
+                <td style="background-color: #ea9999;">1,93 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+                <td>4,60</td>
+                <td>5,90</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Rosario</td>
+                <td>Paraná</td>
+                <td style="background-color: #ea9999;">1,12 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>5,00</td>
+                <td>5,25</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Puerto Pilcomayo</td>
+                <td>Paraguay</td>
+                <td style="background-color: #fff2cc;">4,33 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>5,35</td>
+                <td>6,00</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Puerto Formosa</td>
+                <td>Paraguay</td>
+                <td style="background-color: #fff2cc;">4,43 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>7,80</td>
+                <td>8,30</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>San Javier</td>
+                <td>Uruguay</td>
+                <td style="background-color: #f6b26b;">1,10 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+                <td>8,00</td>
+                <td>10,00</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Santo Tomé</td>
+                <td>Uruguay</td>
+                <td style="background-color: #fff2cc;">3,41 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+                <td>11,50</td>
+                <td>12,50</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Paso de los Libres</td>
+                <td>Uruguay</td>
+                <td style="background-color: #fff2cc;">4,36 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>7,50</td>
+                <td>8,50</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Concordia</td>
+                <td>Uruguay</td>
+                <td style="background-color: #fff2cc;">4,24 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>11,00</td>
+                <td>12,50</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Concepción del Uruguay</td>
+                <td>Uruguay</td>
+                <td style="background-color: #f6b26b;">1,04 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>5,30</td>
+                <td>6,30</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Boca Gualeguaychú</td>
+                <td>Uruguay</td>
+                <td style="background-color: #f6b26b;">0,78 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td>2,90</td>
+                <td>3,10</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Bahia Negra</td>
+                <td>Paraguay</td>
+                <td style="background-color: #cfe2f3;">5,31 <i class="fas fa-equals"></i></td>
+                <td>5,00</td>
+                <td>5,50</td>
+                <td></td>
+                <td><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color: yellow;"></i></td>
+            </tr>
+        </table>
+        <table class="leyenda-tabla-hidro">
+          <tr><td style="background-color: #6fa8dc;">aguas altas</td></tr>
+          <tr><td style="background-color: #cfe2f3;">aguas medias altas</td></tr>
+          <tr><td style="background-color: #fff2cc;">aguas medias</td></tr>
+          <tr><td style="background-color: #f6b26b;"> aguas medias bajas</td></tr>
+          <tr><td style="background-color: #ea9999;">aguas bajas</td></tr>
+        </table>
+        <p>En Guairá, la afluencia a Itaipú se observa oscilante en el límite de las aguas bajas/medias bajas. A corto plazo se prevé que se mantenga con aumento de punta hacia las aguas medias bajas y el nivel de base se sostenga estable en aguas bajas, en asociación a la amplitud observada en la erogación en Porto Primavera (incremento de punta). En Itaipú, la erogación se observó con descenso de base en aguas bajas, y todavía con punta en aguas medias bajas. La descarga del río Iguazú persiste con base en aguas bajas, en asociación al déficit prolongado. Se espera que continúe con base en aguas bajas y punta en aguas medias bajas, fuertemente regulado en una condición por debajo de lo normal. La afluencia a Yacyretá se observó con incremento de punta en aguas medias bajas, en respuesta al aumento del aporte de la cuenca propia, en asociación a las últimas lluvias registradas (abundantes). Asimismo, por este efecto persistirá con base estable o con leve ascenso, en aguas bajas, durante los próximos días (si bien es presumible que la amplitud disminuya). A su vez, la erogación se observó con punta en aguas medias bajas y leve aumento de base, con previsión a corto plazo de continuar con base estable y punta estable o en leve disminución. Aguas abajo, el río Paraná en el tramo Corrientes - Goya se observa con incremento ocasional de punta en aguas medias bajas, asociado a las lluvias ocurridas sobre el Paraná argentino - paraguayo y al efecto del aporte en ruta. A corto plazo se prevé que persista con la dinámica observada, para observarse luego disminución de punta, si bien con base en leve incremento (probablemente con aproximación a aguas medias bajas en Corrientes) por efecto del gradual aumento de caudal del río Paraguay y la erogación estable en Yacyretá. Por otro lado, sobre La Paz - Rosario se observa en aguas bajas, con gradual aumento en los valores semanales, más significativo en La Paz por propagación del patrón observado aguas arriba.</p>
         <h4>Hidrogramas</h4>
-            <div><img class="plot" src="https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/corrientes.png"></div>
-            <div><img class="plot" src="https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/barranqueras.png"></div>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/corrientes.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/barranqueras.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/goya.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/reconquista.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/la_paz.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/parana.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/santa_fe.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/rosario.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/puerto_pilcomayo.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/puerto_formosa.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/san_javier.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/santo_tome.png></p>
+            <p><img class="plot" src=https://alerta.ina.gob.ar/ina/08-PRONOSTICOS/graficos/paso_de_los_libres.png></p>
       </div>
     </section>
-
-</main>
+</body>
+</html>
